--- a/content/less/price-table.less
+++ b/content/less/price-table.less
@@ -69,4 +69,55 @@
 
         }
     }
+
+    & &__presentation{
+        color: #07ba90;
+        margin: 20px 0;
+        display: block;
+        font-size: .8rem;
+    }
+}
+
+
+// ----------------------------------------------------------
+// Block '.button'
+// ----------------------------------------------------------
+.button{
+    position: relative;
+    -webkit-appearance: none;
+    margin: 0;
+    border: none;
+    overflow: visible;
+    font: inherit;
+    color: #90a4ae;
+    text-transform: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 5px 20px 5px;
+    background: #fff;
+    vertical-align: middle;
+    line-height: 30px;
+    // font-weight: 600;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: all 300ms;
+    box-shadow: none;
+    outline: none;
+    border: 2px solid transparent;
+
+    &&--green{
+        background-color: #07ba90;
+        color: #fff;
+        box-shadow: 0 2px 5px rgba(21, 190, 150, 0.4);
+        border: 2px solid #07ba90;
+        transition: all 300ms;
+    }
+
+    &&--border{
+        background: #fff;
+        box-shadow: none;
+        color: #07ba90;
+    }
 }
