--- a/content/less/price-table.less
+++ b/content/less/price-table.less
@@ -7,12 +7,11 @@
     font-family: 'PT Sans', sans-serif;
 
     position: relative;
-    margin: 0 auto;
     // display: flex;
     box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.1);
     
     width: 80%;
-    margin-top: 60px;
+    margin: 60px auto;
     
     // Element '.price-table .price-table__item'
     & &__item{
