--- a/content/less/variables.less
+++ b/content/less/variables.less
@@ -23,6 +23,7 @@
 @color-green-dark:                   #1f9b7d;
 @color-red:                          #e23d3d;
 @color-gray:                         #3d3d3d;
+@color-muted:                        #999;
 
 // Aside
 @aside-background:                   rgba(255, 255, 255, 1);
